using vouchers in requests, fixed type generation
